Upload is working fine, just muliple copies of segment gets uploaded